--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
+.moviePic{
+	height:200px;
+	width:200px;
+	opacity:0.7;
+	position:absolute;
+}
 
+.movieDetail{
+	position:top;
+	width:300px;
+	text-align:center;
+	font-size:20px;
+}
 /* Your CSS Code here. */
